# irb-in-hurry

./: .gitignore  CLAUDE.md  Makefile  README.md  README.zh-TW.md  config.yml  dashboard.sh  pyproject.toml  requirements.txt
.claude/skills/irb/: SKILL.md
.claude/skills/irb/references/: amendment.md  closure.md  config-schema.md  continuing-review.md  new-case.md  other-categories.md  reviewer-guide.md  sae.md  study-types.md
scripts/: checklist.py  convert.py  docx_utils.py  form_selector.py  generate_all.py  reviewer.py
scripts/generators/: amendment.py  appeal.py  closure.py  consent.py  continuing_review.py  ib_update.py  import_forms.py  new_case.py  other.py  re_review.py  sae.py  suspension.py
tests/: test_form_selector.py  test_retrospective_e2e.py
tests/fixtures/: mock_ici_thyroid.yml  mock_proposal.md  sample_retrospective.yml
