[project]
name = "irb-in-hurry"
version = "1.0.0"
description = "Automated KFSYSCC IRB document preparation — 43 forms, 11 categories, one command"
requires-python = ">=3.10"
dependencies = [
    "python-docx",
    "pyyaml",
    "pdf2image",
    "pillow",
]

[dependency-groups]
dev = [
    "pytest",
]
